# xrust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: bench_anode.rs  bench_forest.rs  bench_intmuttree.rs  bench_smite.rs
benchmarks/: bench_anode.rs  bench_forest.rs  bench_xslt.rs  mod.rs
doc/: Compliance.numbers  compliance.md
docs/: compliance.md  namespace-design.key
examples/: issue-30.rs  issue-30.xml  issue-30.xpath  issue_52.rs  ixml.rs  make-html.xsl  sample.md
src/: construct.rs  evaluate.rs  externals.rs  forest.rs  intmuttree.rs  item.rs  lib.rs  libxml_adaptor.rs  namespace.rs  namespace_in.rs  new_qname.rs  node.rs  output.rs  parsecommon.rs  parsepicture.rs  parsexml.rs  pattern.rs  qname.rs  qname_in.rs  rctree.rs  rox_adaptor.rs  rwdocument.rs  sequence.rs  transcomb.rs  value.rs  xdmerror.rs  xdmgraph.rs  xml.rs  xmldecl.rs  xpath.rs  xpath_ebnf.rs  xslt.rs
src/impls/: ga.rs  graphitem.rs  xdmlibxml.rs  xdmtrees.rs
src/parser/: common.rs  mod.rs  xml.rs
src/testutils/: eval_test.rs  item_node.rs  item_value.rs  mod.rs  pattern_tests.rs  transcomb_tests.rs  transform_tests.rs  xpath_tests.rs  xslt_tests.rs  xsltgeneric.rs
src/transform/: booleans.rs  callable.rs  construct.rs  context.rs  controlflow.rs  datetime.rs  functions.rs  grouping.rs  keys.rs  logic.rs  misc.rs  mod.rs  navigate.rs  numbers.rs  strings.rs  template.rs  variables.rs
src/trees/: forest.rs  graphtree.rc  intmuttree.rs  mod.rs  nullo.rs  rctree.rs  smite.rs  smite_in.rs
src/validators/: mod.rs
tests/: conformance_xml_eduni_errata2e_error.rs  conformance_xml_eduni_errata2e_invalid.rs  conformance_xml_eduni_errata2e_notwf.rs  conformance_xml_eduni_errata2e_valid.rs  conformance_xml_eduni_errata3e_invalid.rs  conformance_xml_eduni_errata3e_notwf.rs  conformance_xml_eduni_errata3e_valid.rs  conformance_xml_eduni_errata4e_error.rs  conformance_xml_eduni_errata4e_invalid.rs  conformance_xml_eduni_errata4e_notwf.rs  conformance_xml_eduni_errata4e_valid.rs  conformance_xml_eduni_misc_invalid.rs  conformance_xml_eduni_misc_notwf.rs  conformance_xml_eduni_namespaces_10_error.rs  conformance_xml_eduni_namespaces_10_invalid.rs  conformance_xml_eduni_namespaces_10_notwf.rs  conformance_xml_eduni_namespaces_10_valid.rs  conformance_xml_eduni_namespaces_11_notwf.rs  conformance_xml_eduni_namespaces_11_valid.rs  conformance_xml_eduni_namespaces_errata1e_notwf.rs  conformance_xml_eduni_xml11_error.rs  conformance_xml_eduni_xml11_invalid.rs  conformance_xml_eduni_xml11_notwf.rs  conformance_xml_eduni_xml11_valid.rs  conformance_xml_ibm11_invalid.rs  conformance_xml_ibm11_notwf.rs  conformance_xml_ibm11_valid.rs  conformance_xml_ibm_error.rs  conformance_xml_ibm_invalid.rs  conformance_xml_ibm_notwf_1.rs  conformance_xml_ibm_notwf_2.rs  conformance_xml_ibm_notwf_3.rs  conformance_xml_ibm_notwf_4.rs  conformance_xml_ibm_notwf_5.rs  conformance_xml_ibm_notwf_6.rs  conformance_xml_ibm_notwf_7.rs  conformance_xml_ibm_notwf_8.rs  conformance_xml_ibm_valid.rs  conformance_xml_oasis_error.rs  conformance_xml_oasis_invalid.rs  (+29 more)
tests/avt/: mod.rs
tests/conformance/: mod.rs
tests/documentgeneric/: mod.rs
tests/evaluate/: mod.rs
tests/item_node/: mod.rs
tests/item_value/: mod.rs
tests/node/: mod.rs
tests/obsolete/: intmuttree.rs
tests/patterngeneric/: mod.rs
tests/smite/: mod.rs
tests/smite_in/: mod.rs
tests/txt/: result1.txt
(+1081 files in other folders)
