[package]
name = "xrust"
version = "0.8.0"
keywords = ["xml", "json", "xpath", "xslt", "tree"]
categories = ["parser-implementations"]
description = "Support for XPath, and XSLT"
authors = ["Steve Ball <Steve.Ball@explain.com.au>", "Daniel Murphy <daniel@devasta.ie>"]
license = "Apache-2.0"
repository = "https://github.com/ballsteve/xrust"
documentation = "https://docs.rs/xrust/"
readme = "README.md"
edition = "2021"

[features]
# The xslt feature enables XSLT support
default = ["xslt"]
xslt = []

[[bench]]
name = "bench_intmuttree"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.20"
rust_decimal_macros = "1.20"
lexers = "0.1.2"
nom = "7.1.1"
unicode-segmentation = "1.7.1"
chrono = "0.4.23"
url = "2.2.2"
generational-arena = "0.2"
regex = "1.6.0"

[dev-dependencies]
criterion = "0.3"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"