[package]
name = "xrust"
version = "0.9.0"
keywords = ["xml", "json", "xpath", "xslt", "tree"]
categories = ["parser-implementations"]
description = "Support for XPath, and XSLT"
authors = ["Steve Ball <Steve.Ball@explain.com.au>", "Daniel Murphy <daniel@devasta.ie>"]
license = "Apache-2.0"
repository = "https://github.com/ballsteve/xrust"
documentation = "https://docs.rs/xrust/"
readme = "README.md"
edition = "2021"

[features]
# The xslt feature enables XSLT support
default = ["xslt"]
xslt = []

[[bench]]
name = "bench_intmuttree"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
lexers = "0.1.4"
unicode-segmentation = "1.10.1"
chrono = "0.4.31"
url = "2.4.1"
# This is for the forest tree implementation
#generational-arena = "0.2"
regex = "1.10.2"

[dev-dependencies]
criterion = "0.5.1"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
#ixml = { package = "earleybird", version = "0.0.1" }
earleybird = {path = "../earleybird"}
indextree = "4.6.0"
