[package]
name = "xrust"
version = "1.2.3"
keywords = ["xml", "json", "xpath", "xslt", "tree"]
categories = ["parser-implementations"]
description = "Support for XPath and XSLT"
authors = ["Steve Ball <Steve.Ball@explain.com.au>", "Daniel Murphy <daniel@devasta.ie>"]
license = "Apache-2.0"
repository = "https://github.com/ballsteve/xrust"
documentation = "https://docs.rs/xrust/"
readme = "README.md"
edition = "2021"

[features]
# The xslt feature enables XSLT support
default = ["xslt"]
xslt = []

[[bench]]
name = "bench_smite"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
lexers = "0.1.4"
unicode-segmentation = "1.12.0"
chrono = "0.4.38"
url = "2.5.2"
pkg-version = "1.0.0"
# This is for the forest tree implementation
#generational-arena = "0.2"
regex = "1.11.0"
# For formatting numbers
formato = "0.2.0"
# For formatting integers
english-numbers = "0.3.3"
italian_numbers = "0.1.0"

hexdump = "0.1.2"

[dev-dependencies]
criterion = "0.5.1"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
earleybird = {git = "https://github.com/mdubinko/earleybird.git"}
indextree = "4.6.1"
